Overflow fix

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -77,6 +77,7 @@
     font-weight: 300;
     padding-left: 2rem;
     padding-right: 2rem;
+    overflow-y: scroll;
 }
 
 .Card--RightStats{
